Finishing header styling and working on responsive

--- a/WebSite/Sections/index.html
+++ b/WebSite/Sections/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/WebSite/Styles/normalizer.css">
+    <link rel="stylesheet" href="/WebSite/Styles/styles.css">
+    <link rel="icon" href="/WebSite/Images/logo.ico">
     <title>Ginecología | Inicio</title>
 </head>
 
 <body>
 
+    <script src="/WebSite/scripts.js"></script>
+
     <header>
-        <div>
-            <img src="/WebSite/Images/logo.png" class="logo" alt="logo atencion integral de la mujer">
-        </div>
-        <div class="nav-bar">
-            <li>
-                <ul>Inicio</ul>
-                <ul>Ubicación</ul>
-                <ul>Agendar</ul>
-            </li>
+        <a href=""><img class="logo-image" src="/WebSite/Images/logo.png" alt="Instituto Integral de la Mujer Logo"></a>
+        <nav>
+            <ul class="nav-links responsive-nav-menu-off">
+                <li class="nav-link">
+                    <a href="https://tiempodesites.netlify.app">Inicio</a>
+                    <div class="animated-sites-underline"></div>
+                </li>
+                <li class="nav-link">
+                    <a href="/Secciones/conocenos.html">Ubicación</a>
+                    <div class="animated-sites-underline"></div>
+                </li>
+                <li class="nav-link">
+                    <a href="/Secciones/proyectos.html">Agendar</a>
+                    <div class="animated-sites-underline"></div>
+                </li>
+            </ul>
+        </nav>
+        <div class="burger">
+            <div class="line-1"></div>
+            <div class="line-2"></div>
+            <div class="line-3"></div>
         </div>
     </header>
 
