--- a/WebSite/Sections/index.html
+++ b/WebSite/Sections/index.html
@@ -12,22 +12,20 @@
 
 <body>
 
-    <script src="/WebSite/scripts.js"></script>
-
     <header>
         <a href=""><img class="logo-image" src="/WebSite/Images/logo.png" alt="Instituto Integral de la Mujer Logo"></a>
         <nav>
             <ul class="nav-links responsive-nav-menu-off">
                 <li class="nav-link">
-                    <a href="https://tiempodesites.netlify.app">Inicio</a>
+                    <a href="/WebSite/Sections/index.html">Inicio</a>
                     <div class="animated-sites-underline"></div>
                 </li>
                 <li class="nav-link">
-                    <a href="/Secciones/conocenos.html">Ubicación</a>
+                    <a href="/Secciones/ubicacion.html">Ubicación</a>
                     <div class="animated-sites-underline"></div>
                 </li>
                 <li class="nav-link">
-                    <a href="/Secciones/proyectos.html">Agendar</a>
+                    <a href="/Secciones/agendar.html">Agendar</a>
                     <div class="animated-sites-underline"></div>
                 </li>
             </ul>
@@ -40,12 +38,28 @@
     </header>
 
     <main>
-
+        <div class="slider">
+            <span id="slide-1"></span>
+            <span id="slide-2"></span>
+            <span id="slide-3"></span>
+            <div class="image-container">
+              <img src="/WebSite/Images/imagen1.jpg" class="slide" width="500" height="300" />
+              <img src="/WebSite/Images/imagen2.jpg" class="slide" width="500" height="300" />
+              <img src="/WebSite/Images/imagen3.jpg" class="slide" width="500" height="300" />
+            </div>
+            <div class="buttons">
+              <a href="#slide-1" class="current-button"></a>
+              <a href="#slide-2"></a>
+              <a href="#slide-3"></a>
+            </div>
+          </div>
     </main>
 
     <footer>
 
     </footer>
 </body>
+
+<script src="/WebSite/scripts.js"></script>
 
 </html>
