Other pages, begin footer

--- a/WebSite/Sections/ubicacion.html
+++ b/WebSite/Sections/ubicacion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="/WebSite/Styles/normalizer.css">
     <link rel="stylesheet" href="/WebSite/Styles/styles.css">
     <link rel="icon" href="/WebSite/Images/logo.ico">
-    <title>Ginecología | Inicio</title>
+    <title>Ginecología | Ubicación</title>
 </head>
-
 <body>
-
     <header>
         <a href=""><img class="logo-image" src="/WebSite/Images/logo.png" alt="Instituto Integral de la Mujer Logo"></a>
         <nav>
@@ -36,35 +34,5 @@
             <div class="line-3"></div>
         </div>
     </header>
-
-    <main>
-        
-    </main>
-
-    <footer>
-        <div>
-            <div>
-                <h3>Ubicación</h3>
-                <p>Av. Independencia 253</p>
-                <p>Col. Chapultepec Puebla,Pue.</p>
-            </div>
-            <div>
-                <h3>Contacto</h3>
-                <div>
-                    <img src="/WebSite/Images/whatsapp-icon.svg" alt="whatsapp-icon">
-                    <p>+52 222 238-5056</p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <h3>Horarios</h3>
-                <p></p>
-            </div>
-        </div>
-    </footer>
 </body>
-
-<script src="/WebSite/scripts.js"></script>
-
 </html>
