--- a/WebSite/Sections/index.html
+++ b/WebSite/Sections/index.html
@@ -42,24 +42,30 @@
     </main>
 
     <footer>
-        <div>
+        <div class="footer-container">
             <div>
-                <h3>Ubicación</h3>
-                <p>Av. Independencia 253</p>
-                <p>Col. Chapultepec Puebla,Pue.</p>
-            </div>
-            <div>
-                <h3>Contacto</h3>
                 <div>
-                    <img src="/WebSite/Images/whatsapp-icon.svg" alt="whatsapp-icon">
-                    <p>+52 222 238-5056</p>
+                    <h3>Ubicación</h3>
+                    <p class="footer-text">Av. Independencia 253</p>
+                    <p class="footer-text">Col. Chapultepec Puebla,Pue.</p>
+                </div>
+                <div>
+                    <h3>Contacto</h3>
+                    <div class="footer-contacto-align">
+                        <img class="whatsapp-logo" src="/WebSite/Images/whatsapp-icon.svg" alt="whatsapp-icon">
+                        <p class="footer-text">+52 222 238-5056</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
             <div>
-                <h3>Horarios</h3>
-                <p></p>
+                <div>
+                    <h3>Horarios</h3>
+                    <p class="footer-text">Lunes - Viernes</p>
+                    <div>
+                        <p class="footer-text">10am - 13pm</p>
+                        <p class="footer-text">17pm - 19pm</p>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
