Non-resposive image slider

--- a/WebSite/Sections/agendar.html
+++ b/WebSite/Sections/agendar.html
@@ -19,11 +19,7 @@
                     <div class="animated-sites-underline"></div>
                 </li>
                 <li class="nav-link">
-                    <a href="/Secciones/ubicacion.html">Ubicación</a>
-                    <div class="animated-sites-underline"></div>
-                </li>
-                <li class="nav-link">
-                    <a href="/Secciones/agendar.html">Agendar</a>
+                    <a href="/WebSite/Sections/agendar.html">Agendar</a>
                     <div class="animated-sites-underline"></div>
                 </li>
             </ul>
