--- a/WebSite/Sections/index.html
+++ b/WebSite/Sections/index.html
@@ -21,11 +21,11 @@
                     <div class="animated-sites-underline"></div>
                 </li>
                 <li class="nav-link">
-                    <a href="/Secciones/ubicacion.html">Ubicación</a>
+                    <a href="#ubicacion.html">Ubicación</a>
                     <div class="animated-sites-underline"></div>
                 </li>
                 <li class="nav-link">
-                    <a href="/Secciones/agendar.html">Agendar</a>
+                    <a href="/WebSite/Sections/agendar.html">Agendar</a>
                     <div class="animated-sites-underline"></div>
                 </li>
             </ul>
@@ -39,6 +39,37 @@
 
     <main>
         
+        <section class="slider-section">
+            <div class="slider-container">
+                
+                <div class="left-button" onclick="leftSwap()">
+                    <img src="/WebSite/Images/left-arrow.png" alt="left arrow">
+                </div>
+                <div class="right-button" onclick="rightSwap()">
+                    <img src="/WebSite/Images/right-arrow.png" alt="right arrow">
+                </div>
+
+                <div class="index-button-1 current-slider-index" onclick="leftIndexClick()"></div>
+                <div class="index-button-2" onclick="middleIndexClick()"></div>
+                <div class="index-button-3" onclick="rightIndexClick()"></div>
+
+                <div class="slider-image"></div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section>
+            <div>
+                <div class="image-pink-background"></div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <p>Dra. Gema Sombrerero Juárez</p>
+                <p> Diploma Medicina: BUAP</p>
+                <p>Diploma Ginecología: BUAP</p>
+            </div>
+        </section>
     </main>
 
     <footer>
