Dr Information Section 90% completed

--- a/WebSite/Sections/index.html
+++ b/WebSite/Sections/index.html
@@ -39,7 +39,7 @@
 
     <main>
         
-        <section class="slider-section">
+        <section>
             <div class="slider-container">
                 
                 <div class="left-button" onclick="leftSwap()">
@@ -60,16 +60,27 @@
         <hr>
 
         <section>
-            <div>
-                <div class="image-pink-background"></div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <p>Dra. Gema Sombrerero Juárez</p>
-                <p> Diploma Medicina: BUAP</p>
-                <p>Diploma Ginecología: BUAP</p>
+            <div class="dr-div">
+                <div class="dr-image-card">
+                    <img class="dr-image" src="" alt="Dra. Gema Sombrerero">
+                </div>
+                <div class="dr-information">
+                    <p class="dr-name">Dra. Gema Sombrerero Juárez</p>
+                    <p> Diploma Medicina: BUAP</p>
+                    <p>Diploma Ginecología: BUAP</p>
+                </div>
             </div>
         </section>
+
+        <hr>
+
+        <section>
+            <div class="title-container">
+                <h2 class="title">Tipos de Consultas</h2>
+            </div>
+        </section>
+
+        <hr>
     </main>
 
     <footer>
