full validation for inputs

--- a/WebSite/Sections/agendar.html
+++ b/WebSite/Sections/agendar.html
@@ -36,6 +36,11 @@
             <div class="title-container">
                 <h2 class="title">Agendar</h2>
             </div>
+            <div class="title-description-container">
+                <p>Puedes agendar llenando el formulario o marcando a +52 222 238-5056</p>
+                <p>La doctora solo atiende mujeres</p>
+                <p>Si tienen dudas, favor de marcar al mismo número</p>
+            </div>
             <div class="table-container">
                 <img src="/WebSite/Images/schedule-table.jpg" alt="Horarios">
             </div>
@@ -58,7 +63,7 @@
                     </div>
                     <div class="form-input-container">
                         <label for="hour">Horario a solicitar:</label>
-                        <input class="form-input" type="time" id="hour" name="hour">
+                        <input class="form-input" type="time" step="3600" value="10:00" id="hour" name="hour">
                     </div>
                 </div>
             </form>
