--- a/WebSite/Sections/agendar.html
+++ b/WebSite/Sections/agendar.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header>
-        <a href="/Website/Sections/index.html"><img class="logo-image" src="/WebSite/Images/logo.png" alt="Instituto Integral de la Mujer Logo"></a>
+        <a href="/index.html"><img class="logo-image" src="/WebSite/Images/logo.png" alt="Instituto Integral de la Mujer Logo"></a>
         <nav>
             <ul class="nav-links responsive-nav-menu-off">
                 <li class="nav-link">
-                    <a href="/WebSite/Sections/index.html">Inicio</a>
+                    <a href="/index.html">Inicio</a>
                     <div class="animated-sites-underline"></div>
                 </li>
                 <li class="nav-link">
